--- a/Views/Company/ManageUserRoles.cshtml
+++ b/Views/Company/ManageUserRoles.cshtml
@@ -48,7 +48,7 @@
         <div class="modal-content">
             <div class="modal-header">
                 <h5 class="modal-title" id="exampleModalCenterTitle">Manage User</h5>
-                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                <button type="button" class="close" data-bs-dismiss="modal" aria-label="Close">
                     <i class="ti-close"></i>
                 </button>
             </div>
@@ -73,7 +73,7 @@
                     </table>
                 </div>
                 <div class="modal-footer" style="height:inherit">
-                    <button type="button" class="btn btn-secondary" data-dismiss="modal">
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">
                         No/Close
                     </button>
                     <button type="button" id="editConfirm" onclick="submitForm()" class="btn btn-primary">Yes/Save changes</button>
