--- a/Views/Projects/ManageProjectMembers.cshtml
+++ b/Views/Projects/ManageProjectMembers.cshtml
@@ -291,7 +291,7 @@
                         <div class="modal-content">
                             <div class="modal-header">
                                 <h5 class="modal-title" id="exampleModalCenterTitle">Edit Project</h5>
-                                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                <button type="button" class="close" data-bs-dismiss="modal" aria-label="Close">
                                     <i class="ti-close"></i>
                                 </button>
                             </div>
@@ -319,7 +319,7 @@
                                     </table>
                                 </div>
                                 <div class="modal-footer" style="height:inherit">
-                                    <button type="button" class="btn btn-secondary" data-dismiss="modal">
+                                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">
                                         No/Close
                                     </button>
                                     <button type="submit" id="editConfirm" class="btn btn-primary">Yes/Save changes</button>
