--- a/Views/Company/Edit.cshtml
+++ b/Views/Company/Edit.cshtml
@@ -1,4 +1,4 @@
-﻿@model CrucibleBugTracker.Models.Company
+﻿@*@model CrucibleBugTracker.Models.Company
 
 @{
     ViewData["Title"] = "Edit";
@@ -47,3 +47,4 @@
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
 }
+*@
