--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -97,7 +97,7 @@
                 <div class="col-12 col-lg-6">
                     <div class="card h-100 assignProjectUsers">
                         <div class="card-header">
-                            Submitters
+                            Project Managers
                         </div>
                         <div class="card-body assignProjectUsersTable">
                             <ul>
