--- a/Areas/Identity/Pages/Account/Login.cshtml
+++ b/Areas/Identity/Pages/Account/Login.cshtml
@@ -16,7 +16,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Gogi - Admin and Dashboard Template</title>
 
     <!-- Favicon -->
     <link rel="shortcut icon" href="~/assets/media/image/favicon.png" />
@@ -38,15 +37,15 @@
     <div class="form-wrapper">
 
         <!-- logo -->
-        <div id="logo">
-            <a asp-controller="Home" asp-action="Index">
-                <img src="../../assets/media/image/dark-logo.png" alt="image">
+        <div id="logo d-flex text-center justify-content-center">
+            <a asp-controller="Home" asp-action="Index" class="d-flex align-items-center justify-content-center text-center">
+                <img src="~/img/orionblue.png" alt="image" style="max-width:170px;" class="rounded-pill justify-content-center img-fluid">
             </a>
         </div>
         <!-- ./ logo -->
 
 
-        <h5>Sign in</h5>
+        <h5 class="mt-3">Sign in</h5>
 
         <!-- form -->
         <form id="account" method="post">
@@ -69,7 +68,7 @@
                 <a href="recovery-password.html">Reset password</a>
             </div>
             <button id="login-submit" type="submit" class="btn btn-primary btn-block">Sign in</button>
-            <hr />            
+            <hr />
         </form>
         <!-- ./ form -->
         <section>
