--- a/Areas/Identity/Pages/Account/Register.cshtml
+++ b/Areas/Identity/Pages/Account/Register.cshtml
@@ -11,7 +11,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Gogi - Admin and Dashboard Template</title>
 
     <!-- Favicon -->
     <link rel="shortcut icon" href="~/assets/media/image/favicon.png" />
@@ -33,15 +32,15 @@
     <div class="form-wrapper">
 
         <!-- logo -->
-        <div id="logo">
-            <a asp-controller="Home" asp-action="Index">
-                <img src="~/assets/media/image/dark-logo.png" alt="image">
+        <div id="logo d-flex text-center justify-content-center">
+            <a asp-controller="Home" asp-action="Index" class="d-flex align-items-center justify-content-center text-center">
+                <img src="~/img/orionblue.png" alt="image" style="max-width:170px;" class="rounded-pill justify-content-center img-fluid">
             </a>
         </div>
         <!-- ./ logo -->
 
 
-        <h5>Create account</h5>
+        <h5 class="mt-3">Create account</h5>
 
         <!-- form -->
         <form id ="registerForm" asp-route-returnUrl="@Model.ReturnUrl" method="post">
