--- a/Views/Projects/Details.cshtml
+++ b/Views/Projects/Details.cshtml
@@ -64,7 +64,7 @@
                 </div>
                 <div class="card-body pb-1">
                     <div class="d-flex flex-row justify-content-between">
-                        <h5 class="card-title mb-0">
+                        <h5 class="card-title mb-2">
                             @Model.Name&nbsp;
                             @{
                                 @if (Model.Archived == true)
@@ -98,7 +98,7 @@
                     </div>
 
 
-                    <p class="card-text">
+                    <p class="card-text mb-2">
                         @Html.Raw(Model.Description)
                     </p>
                     <div class="text-end">
