--- a/Areas/Identity/Pages/Account/Login.cshtml
+++ b/Areas/Identity/Pages/Account/Login.cshtml
@@ -18,7 +18,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
     <!-- Favicon -->
-    <link rel="shortcut icon" href="~/assets/media/image/favicon.png" />
+    <link rel="shortcut icon" href="~/img/favicon.ico" />
 
     <!-- Plugin styles -->
     <link rel="stylesheet" href="~/vendors/bundle.css" type="text/css">
