--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -34,7 +34,7 @@
     <link rel="stylesheet" href="~/CrucibleBugTracker.styles.css" asp-append-version="true" />
 
     <!-- Favicon -->
-    <link rel="shortcut icon" href="~/assets/media/image/favicon.png" />
+    <link rel="shortcut icon" href="~/img/favicon.ico" />
 
     <!-- Main css -->
     <link rel="stylesheet" href="~/vendors/bundle.css" type="text/css">
@@ -423,12 +423,12 @@
                 <!-- ./ Content -->
                 <!-- Footer -->
                 <footer class="content-footer">
-                    <div>© 2020 Gogi - <a href="http://laborasyon.com" target="_blank">Laborasyon</a></div>
+                    <div>© 2023 Orion - <a href="https://jamalgibson-portfolio.netlify.app/" target="_blank">Jamal Gibson</a></div>
                     <div>
-                        <nav class="nav">
-                            <a href="https://themeforest.net/licenses/standard" class="nav-link">Licenses</a>
-                            <a href="#" class="nav-link">Change Log</a>
-                            <a href="#" class="nav-link">Get Help</a>
+                        <nav class="nav">                          
+                            <a href="https://jamalgibson-portfolio.netlify.app/" class="nav-link">About Me</a>
+                            <a href="https://github.com/GI-Jamal" class="nav-link">Github</a>
+                            <a href="https://www.linkedin.com/in/jamal-gibson-3b7bb9140/" class="nav-link">LinkedIn</a>
                         </nav>
                     </div>
                 </footer>
