--- a/Areas/Identity/Pages/Account/RegisterByInvite.cshtml
+++ b/Areas/Identity/Pages/Account/RegisterByInvite.cshtml
@@ -13,13 +13,13 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
     <!-- Favicon -->
-    <link rel="shortcut icon" href="../../assets/media/image/favicon.png" />
+    <link rel="shortcut icon" href="~/img/favicon.ico" />
 
     <!-- Plugin styles -->
-    <link rel="stylesheet" href="../../vendors/bundle.css" type="text/css">
+    <link rel="stylesheet" href="~/vendors/bundle.css" type="text/css">
 
     <!-- App styles -->
-    <link rel="stylesheet" href="../../assets/css/app.min.css" type="text/css">
+    <link rel="stylesheet" href="~/assets/css/app.min.css" type="text/css">
 </head>
 <body class="form-membership">
 
@@ -82,10 +82,10 @@
     </div>
 
     <!-- Plugin scripts -->
-    <script src="../../vendors/bundle.js"></script>
+    <script src="~/vendors/bundle.js"></script>
 
     <!-- App scripts -->
-    <script src="../../assets/js/app.min.js"></script>
+    <script src="~/assets/js/app.min.js"></script>
 </body>
 </html>
 
