--- a/Views/Invites/ProcessInvite.cshtml
+++ b/Views/Invites/ProcessInvite.cshtml
@@ -13,13 +13,13 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
     <!-- Favicon -->
-    <link rel="shortcut icon" href="../../assets/media/image/favicon.png" />
+    <link rel="shortcut icon" href="~/img/favicon.ico" />
 
     <!-- Plugin styles -->
-    <link rel="stylesheet" href="../../vendors/bundle.css" type="text/css">
+    <link rel="stylesheet" href="~/vendors/bundle.css" type="text/css">
 
     <!-- App styles -->
-    <link rel="stylesheet" href="../../assets/css/app.min.css" type="text/css">
+    <link rel="stylesheet" href="~/assets/css/app.min.css" type="text/css">
 </head>
 <body class="form-membership">
 
@@ -34,7 +34,7 @@
         <!-- logo -->
         <div id="logo">
             <a asp-controller="Home" asp-action="Index">
-                <img src="../../assets/media/image/dark-logo.png" alt="image">
+                <img src="~/assets/media/image/dark-logo.png" alt="image">
             </a>
         </div>
         <!-- ./ logo -->
@@ -65,38 +65,12 @@
     </div>
 
     <!-- Plugin scripts -->
-    <script src="../../vendors/bundle.js"></script>
+    <script src="~/vendors/bundle.js"></script>
 
     <!-- App scripts -->
-    <script src="../../assets/js/app.min.js"></script>
+    <script src="~/assets/js/app.min.js"></script>
 </body>
 </html>
-
-
-
-@*
-<h2> Process Invite</h2>
-<div class="panel card-sign">
-    <div class="card-title mt-3 text-center">
-        <h2 class="title text-uppercase font-weight-bold m-0"> Invite</h2>
-    </div>
-    <div class="header">
-        <h3>
-            <span class="clearfix title">
-                <span class="number">Welcome</span><br />
-                <span>@Model.InviteeFirstName @Model.InviteeLastName</span> <br>
-            </span>
-        </h3>
-        <h5><span>Company Name: @Model.Company!.Name </span></h5>
-    </div>
-    <div class="card-body">
-        <p>
-            @Model.Invitor!.FullName has invited you to collaborate on the @Model.Project!.Name project.
-            <br /><br /> Click the "JOIN" button below to register with the company and begin entering tickets.
-        </p>
-        <a class="btn btn-primary btn-lg btn-block" asp-area="Identity" asp-page="/Account/RegisterByInvite" asp-route-token="@Model.CompanyToken.ToString()" asp-route-companyId="@Model.CompanyId" asp-route-id="@Model.Id"><i class="bi bi-box-arrow-in-right"></i> <span>JOIN</span></a>
-    </div>
-</div>*@
 
 @section Scripts {
     <partial name="_ValidationScriptsPartial" />
