--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -447,8 +447,7 @@
     <script src="~/vendors/bundle.js"></script>
 
     <!-- Apex chart -->
-    @*<script src="~/vendors/charts/apex/apexcharts.min.js"></script>*@
-    <script src="https://cdn.jsdelivr.net/npm/apexcharts"></script>
+    <script src="~/vendors/charts/apex/apexcharts.min.js"></script>
 
     <!-- Daterangepicker -->
     <script src="~/vendors/datepicker/daterangepicker.js"></script>
