changed some text

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -709,7 +709,7 @@ else
                             <div class="d-flex flex-column">
                                 <div>
                                     <p>
-                                        Shoot for the stars in any project with the Orion.
+                                        Shoot for the stars in any project with Orion.
                                     </p>
                                     <p>
                                         Orion is a web application designed to revolutionize how you manage your projects.
