--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -712,7 +712,7 @@ else
                                         Shoot for the stars in any project with Orion.
                                     </p>
                                     <p>
-                                        Orion is a web application designed to revolutionize how you manage your projects.
+                                        Orion is an issue tracking web application designed to revolutionize how you manage your projects.
                                         With its cutting-edge features and intuitive interface, Orion is your all-in-one solution for efficient collaboration,
                                         seamless communication, and enhanced productivity.
                                     </p>
