--- a/Views/Projects/Create.cshtml
+++ b/Views/Projects/Create.cshtml
@@ -117,7 +117,7 @@
                                                         <td>
                                                             @if (user.ImageFileData != null)
                                                             {
-                                                                <figure class="avatar mr-3">
+                                                                <figure class="avatar avatar-sm mr-3">
                                                                     <img src="@_FileService.ConvertByteArrayToFile(user.ImageFileData, user.ImageFileType, DefaultImage.BTUserImage)"
                                                                          class="rounded-circle"
                                                                          alt="avatar">
@@ -126,7 +126,7 @@
                                                             }
                                                             else
                                                             {
-                                                                <figure class="avatar mr-3">
+                                                                <figure class="avatar avatar-sm mr-3">
                                                                     <span class="avatar-title bg-info-bright text-info rounded-circle">
                                                                         @user.FirstName?[0]
                                                                     </span>
@@ -175,7 +175,7 @@
                                                         <td>
                                                             @if (user.ImageFileData != null)
                                                             {
-                                                                <figure class="avatar mr-3">
+                                                                <figure class="avatar avatar-sm mr-3">
                                                                     <img src="@_FileService.ConvertByteArrayToFile(user.ImageFileData, user.ImageFileType, DefaultImage.BTUserImage)"
                                                                          class="rounded-circle"
                                                                          alt="avatar">
@@ -184,7 +184,7 @@
                                                             }
                                                             else
                                                             {
-                                                                <figure class="avatar mr-3">
+                                                                <figure class="avatar avatar-sm mr-3">
                                                                     <span class="avatar-title bg-info-bright text-info rounded-circle">
                                                                         @user.FirstName?[0]
                                                                     </span>
