--- a/Views/Projects/Edit.cshtml
+++ b/Views/Projects/Edit.cshtml
@@ -93,8 +93,8 @@
                         </div>
                     </div>
                 </div>
-                <div class="card">
-                    <div class="card-body">
+                <div class="card assignProjectUsers">
+                    <div class="card-body assignProjectUsersTable">
                         <h6 class="card-title">Project Members</h6>
                         <div class="row">
                             @{
@@ -129,7 +129,7 @@
                                                             <td>
                                                                 @if (user.ImageFileData != null)
                                                                 {
-                                                                    <figure class="avatar mr-3">
+                                                                    <figure class="avatar avatar-sm mr-3">
                                                                         <img src="@_FileService.ConvertByteArrayToFile(user.ImageFileData, user.ImageFileType, DefaultImage.BTUserImage)"
                                                                              class="rounded-circle"
                                                                              alt="avatar">
@@ -138,7 +138,7 @@
                                                                 }
                                                                 else
                                                                 {
-                                                                    <figure class="avatar mr-3">
+                                                                    <figure class="avatar avatar-sm mr-3">
                                                                         <span class="avatar-title bg-info-bright text-info rounded-circle">
                                                                             @user.FirstName?[0]
                                                                         </span>
@@ -155,7 +155,7 @@
                                                             <td>
                                                                 @if (user.ImageFileData != null)
                                                                 {
-                                                                    <figure class="avatar mr-3">
+                                                                    <figure class="avatar avatar-sm mr-3">
                                                                         <img src="@_FileService.ConvertByteArrayToFile(user.ImageFileData, user.ImageFileType, DefaultImage.BTUserImage)"
                                                                              class="rounded-circle"
                                                                              alt="avatar">
@@ -164,7 +164,7 @@
                                                                 }
                                                                 else
                                                                 {
-                                                                    <figure class="avatar mr-3">
+                                                                    <figure class="avatar avatar-sm mr-3">
                                                                         <span class="avatar-title bg-info-bright text-info rounded-circle">
                                                                             @user.FirstName?[0]
                                                                         </span>
@@ -199,7 +199,7 @@
                                                         <td>
                                                             @if (developer.ImageFileData != null)
                                                             {
-                                                                <figure class="avatar mr-3">
+                                                                <figure class="avatar avatar-sm mr-3">
                                                                     <img src="@_FileService.ConvertByteArrayToFile(developer.ImageFileData, developer.ImageFileType, DefaultImage.BTUserImage)"
                                                                          class="rounded-circle"
                                                                          alt="avatar">
@@ -208,7 +208,7 @@
                                                             }
                                                             else
                                                             {
-                                                                <figure class="avatar mr-3">
+                                                                <figure class="avatar avatar-sm mr-3">
                                                                     <span class="avatar-title bg-info-bright text-info rounded-circle">
                                                                         @developer.FirstName?[0]
                                                                     </span>
@@ -242,7 +242,7 @@
                                                             <td>
                                                                 @if (user.ImageFileData != null)
                                                                 {
-                                                                    <figure class="avatar mr-3">
+                                                                    <figure class="avatar avatar-sm mr-3">
                                                                         <img src="@_FileService.ConvertByteArrayToFile(user.ImageFileData, user.ImageFileType, DefaultImage.BTUserImage)"
                                                                              class="rounded-circle"
                                                                              alt="avatar">
@@ -251,7 +251,7 @@
                                                                 }
                                                                 else
                                                                 {
-                                                                    <figure class="avatar mr-3">
+                                                                    <figure class="avatar avatar-sm mr-3">
                                                                         <span class="avatar-title bg-info-bright text-info rounded-circle">
                                                                             @user.FirstName?[0]
                                                                         </span>
@@ -267,7 +267,7 @@
                                                             <td>
                                                                 @if (user.ImageFileData != null)
                                                                 {
-                                                                    <figure class="avatar mr-3">
+                                                                    <figure class="avatar avatar-sm mr-3">
                                                                         <img src="@_FileService.ConvertByteArrayToFile(user.ImageFileData, user.ImageFileType, DefaultImage.BTUserImage)"
                                                                              class="rounded-circle"
                                                                              alt="avatar">
@@ -276,7 +276,7 @@
                                                                 }
                                                                 else
                                                                 {
-                                                                    <figure class="avatar mr-3">
+                                                                    <figure class="avatar avatar-sm mr-3">
                                                                         <span class="avatar-title bg-info-bright text-info rounded-circle">
                                                                             @user.FirstName?[0]
                                                                         </span>
@@ -310,7 +310,7 @@
                                                         <td>
                                                             @if (submitter.ImageFileData != null)
                                                             {
-                                                                <figure class="avatar mr-3">
+                                                                <figure class="avatar avatar-sm mr-3">
                                                                     <img src="@_FileService.ConvertByteArrayToFile(submitter.ImageFileData, submitter.ImageFileType, DefaultImage.BTUserImage)"
                                                                          class="rounded-circle"
                                                                          alt="avatar">
@@ -319,7 +319,7 @@
                                                             }
                                                             else
                                                             {
-                                                                <figure class="avatar mr-3">
+                                                                <figure class="avatar avatar-sm mr-3">
                                                                     <span class="avatar-title bg-info-bright text-info rounded-circle">
                                                                         @submitter.FirstName?[0]
                                                                     </span>
