Potentially fixed mobile scroll issue

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -1113,11 +1113,11 @@ else
 
             $('#usersTable').DataTable();
 
-            $('#learnMoreButton').on("click", function () {
-                $('.content').css("overflow", "auto");
-                $('.content').css("overflow", "hidden");
+            // $('#learnMoreButton').on("click", function () {
+            //     $('.content').css("overflow", "auto");
+            //     $('.content').css("overflow", "hidden");
 
-            });
+            // });
         });
     </script>
     <script>
